@@ -12,52 +12,48 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.beans.factory.annotation.Autowired;
-import java.util.Arrays;
+
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    @Autowired
-    private JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+    }
+
+    private static final List<String> SWAGGER_WHITELIST = List.of(
+        "/v3/api-docs", "/v3/api-docs/**", "/swagger-ui.html", "/swagger-ui/**"
+    );
+    private static final List<String> PUBLIC_WHITELIST = List.of(
+        "/api/tenants/preRegister",
+        "/api/tenants/verifyOtp",
+        "/api/tenants/login",
+        "/api/otp/**",
+        "/api/services/*/timeslots/available",
+        "/api/bookings",
+        "/api/bookings/*/confirm",
+        "/health",
+        "/actuator/**"
+    );
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(csrf -> csrf.disable())
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(authz -> authz
-                // SWAGGER & OPENAPI - must be at the top!
-                .requestMatchers(
-                    "/v3/api-docs",
-                    "/v3/api-docs/**",
-                    "/swagger-ui.html",
-                    "/swagger-ui/**"
-                ).permitAll()
-                // Public endpoints - no authentication required
-                .requestMatchers("/api/tenants/preRegister").permitAll()  // POST for registration
-                .requestMatchers("/api/tenants/verifyOtp").permitAll()  // POST for OTP verification
-                .requestMatchers("/api/tenants/login").permitAll()  // POST for login
-                .requestMatchers("/api/otp/**").permitAll()   // All OTP operations
-                .requestMatchers("/api/services/*/timeslots/available").permitAll()  // View available slots
-                .requestMatchers("/api/bookings").permitAll()  // POST for customer bookings
-                .requestMatchers("/api/bookings/*/confirm").permitAll()  // POST for booking confirmation
-                .requestMatchers("/health", "/actuator/**").permitAll()
-                
-                // Protected endpoints - authentication required (Admin/Tenant operations)
-                .requestMatchers("/api/tenants/**").authenticated()  // Tenant management
-                .requestMatchers("/api/services/**").authenticated()  // Service management
-                .requestMatchers("/api/timeslots/**").authenticated()  // Timeslot management
-                .requestMatchers("/api/bookings/**").authenticated()  // Booking management (except POST)
-                
-                // All other requests require authentication
-                .anyRequest().authenticated()
+            .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authorizeHttpRequests(auth -> auth
+                            .requestMatchers(SWAGGER_WHITELIST.toArray(String[]::new)).permitAll()
+                            .requestMatchers(PUBLIC_WHITELIST.toArray(String[]::new)).permitAll()
+                            .anyRequest().authenticated()
             )
             .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-            .httpBasic(httpBasic -> httpBasic.disable())
-            .formLogin(form -> form.disable());
+            .httpBasic(basic -> basic.disable())
+            .formLogin(login -> login.disable());
 
         return http.build();
     }
@@ -69,15 +65,14 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true);
-        
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOriginPatterns(List.of("*"));
+        config.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);
+
+        UrlBasedCorsConfigurationSource src = new UrlBasedCorsConfigurationSource();
+        src.registerCorsConfiguration("/**", config);
+        return src;
     }
 }
-
